# tgtg

./: .gitignore  Dockerfile  Makefile  README.md  app.py  app.spec  config.sample.ini  requirements.txt  setup.cfg
.github/workflows/: tests.yml
tests/tgtg/: test_tgtg.py
tgtg_scanner/: cli.py  helper.py  scanner.py  tgtg.py
tgtg_scanner/models/: __init__.py  config.py  item.py  metrics.py  notifier.py
tgtg_scanner/notifiers/: __init__.py  ifttt.py  push_safer.py  smtp.py  telegram.py  webhook.py
