[metadata]
name = tgtg-scanner
version = 1.9.0
author = Henning Merklinger
description = Scanner for TGTG magic bags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Der-Henning/tgtg
project_urls =
    Bug Tracker = https://github.com/Der-Henning/tgtg/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = 
    tgtg_scanner
    tgtg_scanner.models
    tgtg_scanner.notifiers
python_requires = >=3.9
install_requires =
    packaging
    prometheus-client <=1
    python-pushsafer >=1
    python-telegram-bot ==13
    requests